# sigmond

./: .gitignore  CLAUDE.md  LICENSE  README.md  install.sh  pyproject.toml  smd-banner-v8.sh  tui-configurator.md
docs/: ADD-A-CLIENT.md  CLI-V2-SPEC.md  CLIENT-CONTRACT.md  CONTRACT-v0.5-DRAFT.md  HOST-CAPACITY-PLANNING.md  METEOR-SCATTER-DESIGN.md  MSK144-RECORDER-DESIGN.md  MULTI-INSTANCE-ARCHITECTURE.md  PACKET-LOSS-DIAGNOSTICS.md  PHASE-D-SERVER-MERGE-ENDPOINT.md  PROVISIONING-INPUTS.md  PSWS-HEARTBEAT-SPEC.md  PSWS-INTERFACE-BOUNDARY.md  PSWS-MAPPING.md  RADIOD-IDENTIFICATION.md  REQUIREMENTS-INDEX.md  SCINTILLATION-MONITORING.md  SESSION_2026-06-12_CLIENT_RESILIENCE_SWEEP.md  STATION-NETWORK-CAPABILITIES.md  TUI-FUNCTION-INVENTORY.md  greenfield-runbook.md  install-orchestration-design.md  install-quickstart.md  install-redesign.md  installation-guide.md  native-binaries.md  networking.md  timing-chain-architecture.md
etc/: aliases.sh  catalog.toml  coordination.example.toml  environment.example.toml  radiod.conf.template  topology.example.toml
scripts/: bench_sqlite_contention.py  dev-setup.sh  sigmond-decode-health-collect.py  tui_walk.py
systemd/: sigmond-decode-health-collect.service  sigmond-decode-health-collect.timer  sigmond-storage-trim-all.service  sigmond-storage-trim-all.timer  sigmond-storage-trim-hfdl.service  sigmond-storage-trim-timestd.service  sigmond-storage-trim-timestd.timer  sigmond-storage-trim-wspr.service  sigmond-storage-trim-wspr.timer  sigmond-timing-reconcile.service  sigmond-timing-reconcile.timer  sigmond-wisdom.service
tasks/: plan-ch-wsprdaemon-removal.md  plan-local-resources-probe.md  plan-multi-rx888-sources.md  plan-stream-quality-surface.md
tests/: __init__.py  conftest.py  test_bringup.py  test_capture_prep.py  test_catalog.py  test_ch_apply.py  test_client_config.py  test_client_features.py  test_component_state.py  test_config_migrate.py  test_contract_adapter.py  test_coordination.py  test_cpu.py  test_diag_drop_in.py  test_diag_sftp.py  test_discovery_cache.py  test_discovery_local_resources.py  test_discovery_probes.py  test_environment_loader.py  (+42 more)
(+144 files in other folders)
