[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sigmond"
version = "0.5.0"
description = "HamSCI SDR suite installer, configurator, and lifecycle manager"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Michael Hauan AC0G", email = "ac0g@hauan.org" },
  { name = "Rob Robinett AI6VN" },
]
requires-python = ">=3.11"
# Core smd is stdlib-only by design; see CLAUDE.md.
dependencies = []

[project.optional-dependencies]
# Keep in sync with _TUI_DEPS in bin/smd.
tui = [
  "textual>=8.0.0",
  "rich>=13.0.0",
  "ka9q-python",
]
# Required only by clients that opt into a CONTRACT §17 ClickHouse sink.
# `sigmond.hamsci_ch.Writer` lazy-imports clickhouse-connect, so installing
# sigmond without this extra leaves the core stdlib-only.
clickhouse = [
  "clickhouse-connect>=0.7.0",
]
dev = [
  "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["lib"]
include = ["sigmond*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
ka9q-python = { path = "../ka9q-python" }

[dependency-groups]
dev = [
    "ka9q-python",
]
